--- a/styles.css
+++ b/styles.css
@@ -30,14 +30,16 @@ footer a {
     text-decoration: underline;
 }
 
-.poll {
+..poll {
     position: absolute;
-    top: 80px;
-    right: 20px;
-    width: 700px;
-    max-width: 90%;
+    top: 5vh;  
+    right: 2vw; 
+    width: 40vw; 
+    max-width: 90%; 
     font-family: Arial, sans-serif;
 }
+
+
 
 .head {
     color: blue; 
