--- a/styles.css
+++ b/styles.css
@@ -61,3 +61,32 @@ fieldset {
     max-width: 90%;
     font-family: Arial, sans-serif;
 }
+
+.header {
+    text-align: center;
+    font-family: Arial, 'Times New Roman', Times, serif;
+    color: black;
+    background-color: green;
+    font-size: 32px;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: lightgrey;
+    height:100vh;
+    margin: 0;
+}
+
+.checkbox-group {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    max-width: 600px; 
+    background: lightgrey;
+    
+}
