--- a/styles.css
+++ b/styles.css
@@ -92,3 +92,46 @@ form {
     background: lightgrey;
     
 }
+
+figure {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    margin: 0;
+    text-align: left;
+}
+
+img {
+    display: block;
+}
+
+.travel {
+    color: hsl(1, 100%, 64%);
+    font-weight: bold;
+}
+
+#budgeting ul li {
+    color: black; 
+    font-size: 16px; 
+}
+
+a {
+    color: black;
+}
+
+a:hover {
+    color: red;
+}
+
+.first-letter:first-letter {
+    font-size: 2em; 
+    color: green;   
+    font-weight: bold;
+}
+
+nav a {
+    text-decoration: underline;
+    color: blue; 
+}
+
+
