--- a/styles.css
+++ b/styles.css
@@ -135,3 +135,12 @@ footer a:hover {
 tr:nth-child(even) {
     background-color: #f2f2f2;
   }
+#logo {
+    float:right;
+}
+
+.first-letter::first-letter {
+    font-size: 2em;
+    font-weight: bold;
+    color: #0077b6;
+}
