--- a/styles.css
+++ b/styles.css
@@ -144,3 +144,16 @@ tr:nth-child(even) {
     font-weight: bold;
     color: #0077b6;
 }
+
+#about-logo{
+    float:right;
+}
+
+table {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+th, td {
+    border: 1px solid black;
+    padding: 5px;
+}
