--- a/normalize.css
+++ b/normalize.css
@@ -1,8 +1,8 @@
 
 
  html {
-    line-height: 1.15; /* 1 */
-    -webkit-text-size-adjust: 100%; /* 2 */
+    line-height: 1.15; 
+    -webkit-text-size-adjust: 100%; 
   }
   
  
